# aeterna

./: .gitattributes  .gitignore  QUICKSTART.md  README.md  admin.html  app.js  ar-image.html  ar-location.html  ar-marker.html  dashboard.html  docker-compose.dev.yml  docker-compose.yml  generate-markers.html  help.html  index.html  serve_https.py  start-server.sh  styles.css
assets/: README.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  crud.py  database.py  initial_data.py  main.py  models.py  schemas.py  socketio_app.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  attractions.py  health.py  time_weave.py
backend/app/services/: analytics.py  persona.py
backend/app/services/camara/: __init__.py  client.py  maas.py
backend/store/assets/markers/: pattern-Uluru_Australia.patt
backend/store/assets/nfts/: Uluru_Australia.fset  Uluru_Australia.iset
backend/store/data/: personas.json
backend/tests/: test_analytics_service.py
data/: attractions.yaml  camaraSampleResponses.json
db/: config.json
docs/: ARCHITECTURE.md  MARKER_OPTIONS.md
frontend/: .eslintrc.cjs  Dockerfile  generate-self-signed.sh  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
markers/: README.md  pattern-SydneyHarbourBridge.patt  pattern-SydneyOperaHouse.patt  pattern-Uluru.patt
scripts/: admin.js  aframe-ar-nft.min.js  app.js  ar-image.js  ar-location.js  ar-marker.js  camaraApis.js  dashboard.js  data.js  index.js  metrics.js
styles/: admin.css  ar.css  common.css  dashboard.css  help.css  (+1 more)
(+59 files in other folders)
